2008-01-25  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee.Services/Banshee.Library/LibraryImportManager.cs: 
	Save the artist before the track when importing

2008-01-25  Aaron Bockover  <abock@gnome.org>

	Patch adds GNOME/DBus multimedia keys support; ported by Alex Hixon

	* build/build.environment.mk: 
	* configure.ac:
	* src/Extensions/Extensions.mds:
	* src/Extensions/Makefile.am:
	* src/Core/Makefile.am: 
	* src/Extensions/Banshee.MultimediaKeys/Makefile.am: 
	* src/Extensions/Banshee.MultimediaKeys/Banshee.MultimediaKeys.mdp: Build 
	stuff for the multimedia keys extension

	* src/Extensions/Banshee.MultimediaKeys/Banshee.MultimediaKeys/MultimediaKeysService.cs:
	* src/Extensions/Banshee.MultimediaKeys/Resources/Banshee.MultimediaKeys.addin.xml: MMKeys plugin code/extension 

	* src/Core/Banshee.Services/Banshee.ServiceStack/ServiceManager.cs: 
	Log when a service has started

2008-01-25  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Services/Banshee.Collection.Database/AlbumListDatabaseModel.cs:
	* src/Core/Banshee.Services/Banshee.Collection.Database/ArtistListDatabaseModel.cs:
	Get rid of unnecessary disctinct () call in query.

	* src/Core/Banshee.Services/Banshee.Database/BansheeDbFormatMigrator.cs:
	Add some more indices.

2008-01-25  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Services/Banshee.Collection.Database/AlbumListDatabaseModel.cs:
	* src/Core/Banshee.Services/Banshee.Collection.Database/ArtistListDatabaseModel.cs:
	Use the CoreCache table to filter artists and albums based on the
	currently matching tracks.  Means the artist/album lists are filtered as
	you filter you tracks.

	* src/Core/Banshee.Services/Banshee.Collection.Database/TrackListDatabaseModel.cs:
	Comment out query debugging.

	* src/Core/Banshee.Services/Banshee.Sources/DatabaseSource.cs: Call
	OnUpdated after Reloading.

	* src/Core/Hyena/Hyena.Data.Sqlite/SqliteModelCache.cs: Comment out timers.
